--- a/cvjo.html
+++ b/cvjo.html
@@ -1,41 +1,93 @@
 <!DOCTYPE html>
 <html lang="fr">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CV Jonathan Ruiz</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <header>
-        <h1>Jonathan Ruiz</h1>
-        <nav>
-            <ul>
-                <li><a href="formation.html">formation</a></li>
-                <li><a href="experiences.html">experiences</a></li>
-                <li><a href="skills.html">skills</a></li>
+      <h1>Jonathan Ruiz</h1>
+      <section>
+        <p>
+          Diplomé dans les domaines du commerce international, des langues
+          étranges ainsi qu'en coiffure, je me tourne aujourdhui vers le
+          développement informatique et les thématiques liées au web.
+        </p>
+      </section>
+      <nav>
+        <ul>
+          <li><a href="#formation">Formation</a></li>
+          <li><a href="#experience_pro">Experiences</a></li>
+          <li><a href="#skills">Compétences</a></li>
+        </ul>
+      </nav>
+      <section>
+        <h2 id="formation">FORMATION</h2>
 
-            </ul>
-        </nav>
+        <p>
+          2010-2012: BTS Commerce International - Lycée Bon Secours, Perpignan
+          (66)
+        </p>
+        <p>
+          2013: Licence Langues étrangères Appliquées - UPVD, Perpignan (66)
+        </p>
+        <p>2016: CAP Coiffure - Elysées Marbeuf, Paris 08</p>
+
+        <p>2017: BP Coiffure - CFA Campus des métiers, Bobigny (93)</p>
+      </section>
+      <section>
+        <h2 id="experience_pro">EXPERIENCES PROFESSIONNELLES</h2>
+        <h3>Postes occupés</h3>
+
+        <p>2021-2022: Cut My Bangs, Montpellier - Coiffeur</p>
+        <p>2016-2021: 3D Haircut, Paris 02 - Coiffeur</p>
+        <p>2014-2016: Pathé Boulogne, Boulogne Billancourt - Agent HQ</p>
+
+        <p></p>
+        <h3>Stages en entreprise</h3>
+
+        <p>
+          2012: Domaines Pierre Chavin, Béziers - Assistant export - logistique
+        </p>
+        <p>2011: Fruselva, Tarragone, Espagne - Assistant export - ventes</p>
+      </section>
+      <section>
+        <h2 id="skills">Compétences</h2>
+        <h3>Langues étrangères</h3>
+        <p>Anglais: courrant</p>
+        <p>Espagnol: bilingue</p>
+
+        <h3>Informatique</h3>
+        <p>HTML: work in progres</p>
+        <p>CSS: work in progress</p>
+        <p>JavaScript: work in progress</p>
+        <p>Git: work in progress</p>
+
+        <h3>Soft skills</h3>
+        <p>Travail en équipe</p>
+        <p>Empathie</p>
+        <p>Créativité</p>
+      </section>
     </header>
     <main></main>
-    <form action="contact" method="get"> Contactez-moi
-        <div>
-            <label for="name">Nom:</label>
-            <input type="text">
-        </div>
-        <div>
-            <label for="email">Email:</label>
-            <input type="email">
-        </div>
-        <div>
-            <textarea name="" id="" cols="30" rows="10"></textarea>
-        </div>
-
+    <form action="contact" method="get">
+      Contactez-moi
+      <div>
+        <label for="name">Nom:</label>
+        <input type="text" />
+      </div>
+      <div>
+        <label for="email">Email:</label>
+        <input type="email" />
+      </div>
+      <div>
+        <textarea name="" id="" cols="30" rows="10"></textarea>
+      </div>
+      <button>Envoyer</button>
     </form>
     <footer></footer>
-</body>
-
+  </body>
 </html>
