--- a/cvjo.html
+++ b/cvjo.html
@@ -78,16 +78,21 @@
         Contactez-moi
         <div>
           <label for="name">Nom:</label>
-          <input type="text" />
+          <input type="text" name="name" />
         </div>
         <div>
           <label for="email">Email:</label>
-          <input type="email" />
+          <input type="email" email="email" />
         </div>
         <div>
-          <textarea name="" id="" cols="30" rows="10"></textarea>
+          <textarea
+            placeholder="tapez ici"
+            name="email-content"
+            cols="30"
+            rows="10"
+          ></textarea>
         </div>
-        <button>Envoyer</button>
+        <button type="submit">Envoyer</button>
       </form>
     </main>
   </body>
