--- a/cvjo.html
+++ b/cvjo.html
@@ -7,6 +7,8 @@
     <title>CV Jonathan Ruiz</title>
   </head>
 
+  <link rel="stylesheet" href="./cvjo.css">
+
   <body>
     <header>
       <h1>Jonathan Ruiz</h1>
